# yt-pl-downloader

./: .gitignore  AGENTS.md  LICENSE  README.md  app.py  build.py  config.yaml  links.txt  main.py  playlist_downloader.py  playlist_link.txt  playlist_titles.py  pyproject.toml  renomear_explocacao.md  renomear_videos.py  requirements.txt  titulos.txt  video_downloader.py
.github/workflows/: build-linux.yml  build-windows.yml  main.yml
app/: __init__.py  exceptions.py  main.py
app/cli/: __init__.py  menu.py  quality.py
app/core/: __init__.py  config.py  deno_utils.py  ffmpeg_utils.py  logger.py  utils.py
app/models/: __init__.py  playlist.py  video.py
app/services/: __init__.py  downloader.py  playlist.py  playlist_downloader.py  video.py  video_downloader.py
tests/test_cli/: test_menu.py  test_quality.py
tests/test_core/: test_config.py  test_deno_utils.py  test_ffmpeg_utils.py  test_utils.py
tests/test_integration/: test_downloads.py
tests/test_models/: test_models.py
tests/test_services/: test_downloader.py  test_playlist_downloader.py  test_video_downloader.py
