[project]
name = "yt-pl-downloader"
version = "0.2.0"
description = "A CLI tool to download YouTube videos and playlists"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "inquirer>=3.4.1",
    "poethepoet>=0.45.0",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "yt-dlp>=2025.3.31",
]

[dependency-groups]
dev = [
    "coverage>=7.13.5",
    "pyinstaller>=6.12.0",
    "pytest>=8.0.0",
    "ruff>=0.15.12",
]

[tool.poe.tasks]
# build.py command
builder = "python build.py"

# coverage package commands
cov-run = "uv run coverage run --source=. -m pytest"
cov-report = "uv run coverage report"
cov-html = "uv run coverage html"

# integration tests (download)
# (corrigir) uv run pytest -m "not integration"
# (corrigir) uv run pytest -m "integration"

# coverage package tasks
[tool.poe.tasks.coverage]
sequence = ["cov-run", "cov-report", "cov-html"]

# coverage run configs
[tool.coverage.run]
source = ["classes", "tests"]
omit = ["tests/*", "*/__pycache__/*", "*/migrations/*", "*main.py"]

[tool.coverage.report]
show_missing = true
# Ignorar linhas vazias/comentários no cálculo
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "pass",
    "raise NotImplementedError",
]
fail_under = 90 # Falha se a cobertura total for menor que 90%

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
